@@ -4,6 +4,7 @@ X-editable changelog
 
 Version 1.2.0 wip
 ----------------------------  
+[enh] 'select' submit by enter (vitalets)  
 [bug #37] fix incorrectly shown datepicker in jquery 1.7.1 + webkit (vitalets)  
 [enh] added url param 'jquery' to run tests in different versions of jquery, e.g. '&jquery=1.7.2' (vitalets)  
 [enh] 'enablefocus' option removed. More efficient to use 'save/hide' events to set focus to any element (vitalets)  
